--- a/CafeManager/Base.lproj/Main.storyboard
+++ b/CafeManager/Base.lproj/Main.storyboard
@@ -318,7 +318,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <segue destination="QWR-rw-F0f" kind="presentation" identifier="LogIn segue" id="8bo-Eq-jp7"/>
+                        <segue destination="QWR-rw-F0f" kind="presentation" identifier="LogIn segue" modalPresentationStyle="fullScreen" id="8bo-Eq-jp7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wsZ-tU-DAM" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -334,7 +334,7 @@
                         <viewControllerLayoutGuide type="bottom" id="ZCJ-Jd-Nch"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Skt-Sl-TuT">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
@@ -1631,10 +1631,10 @@
                                                     <inset key="separatorInset" minX="8" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                     <prototypes>
                                                         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="guestOrderCell" id="jI6-1B-FbV" customClass="GuestOrderTableViewCell" customModule="CafeManager" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                                            <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jI6-1B-FbV" id="xGL-yb-Wda">
-                                                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="right" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QDC-iI-CmI">
@@ -2294,10 +2294,10 @@
                                                     <inset key="separatorInset" minX="8" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                     <prototypes>
                                                         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="guestOrderCell" id="k2B-sH-I8S" customClass="GuestOrderTableViewCell" customModule="CafeManager" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                                            <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="k2B-sH-I8S" id="Hsg-qC-8Cd">
-                                                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="right" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bw5-eZ-QLf">
@@ -2946,6 +2946,6 @@
         <image name="TablesLightTheme.png" width="70" height="70"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="8go-wL-hPE"/>
+        <segue reference="grJ-4Q-1He"/>
     </inferredMetricsTieBreakers>
 </document>
